header y pagina inicio

--- a/TarracoCommerce/src/app/shared/header/header.component.html
+++ b/TarracoCommerce/src/app/shared/header/header.component.html
@@ -58,6 +58,10 @@
           <div><a href="">Empresa 1</a></div>
           <div><a href="">Empresa 2</a></div>
           <div><a href="">Empresa 3</a></div>
+          <!-- Generar casillas grises para visualización final -->
+          <div></div>
+          <div></div>
+          <!-- Generar casillas grises para visualización final -->
         </div>
       </div>
       <div class="bordes">
