--- a/TarracoCommerce/src/app/app.component.html
+++ b/TarracoCommerce/src/app/app.component.html
@@ -2,6 +2,7 @@
 
 <div>
   <router-outlet></router-outlet>
+  <!-- <app-inicio></app-inicio> -->
   <!-- <app-about></app-about> -->
   <!-- <app-portfolio></app-portfolio> -->
   <!-- <app-terminos></app-terminos> -->
