--- a/version mejorada/FullStack-TarraCommerce/Frontend/src/app/app.component.html
+++ b/version mejorada/FullStack-TarraCommerce/Frontend/src/app/app.component.html
@@ -1,11 +1,14 @@
 <app-header></app-header>
 
-<div>
-  <router-outlet></router-outlet>
-  <!-- <app-inicio></app-inicio> -->
-  <!-- <app-about></app-about> -->
-  <!-- <app-portfolio></app-portfolio> -->
-  <!-- <app-terminos></app-terminos> -->
-</div>
+<main>
+  <div>
+    <router-outlet></router-outlet>
+    <!-- <app-inicio></app-inicio> -->
+    <!-- <app-usuarios></app-usuarios> -->
+    <!-- <app-about></app-about> -->
+    <!-- <app-portfolio></app-portfolio> -->
+    <!-- <app-terminos></app-terminos> -->
+  </div>
+</main>
 
 <app-footer></app-footer>
