--- a/version mejorada/FullStack-TarraCommerce/Frontend/src/app/pages/inicio/inicio.component.html
+++ b/version mejorada/FullStack-TarraCommerce/Frontend/src/app/pages/inicio/inicio.component.html
@@ -81,7 +81,7 @@
 <section class="contenedorSlider crema">
   <div class="slider">
     <content class="elementSlider">
-      <a routerLink="/about">
+      <a routerLink="about">
         <!-- CAMBIAR EL LINK -->
         <img
           class="imageneSlider"
@@ -97,7 +97,7 @@
       </a>
     </content>
     <content class="elementSlider">
-      <a routerLink="/product">
+      <a routerLink="productos">
         <!-- CAMBIAR EL LINK -->
         <img
           class="imageneSlider"
@@ -114,7 +114,7 @@
       </a>
     </content>
     <content class="elementSlider">
-      <a routerLink="/tarta-manzana">
+      <a routerLink="tarta-manzana">
         <img
           class="imageneSlider"
           src="IMG/productos/tartaManzanaS.png"
@@ -127,7 +127,7 @@
       </a>
     </content>
     <content class="elementSlider">
-      <a routerLink="/libro">
+      <a routerLink="libro">
         <img
           class="imageneSlider"
           src="IMG/productos/libroS.png"
@@ -140,7 +140,7 @@
       </a>
     </content>
     <content class="elementSlider">
-      <a routerLink="/bolso">
+      <a routerLink="bolso">
         <img
           class="imageneSlider"
           src="IMG/productos/bolsoS.png"
@@ -153,7 +153,7 @@
       </a>
     </content>
     <content class="elementSlider">
-      <a routerLink="/bloques-juguete">
+      <a routerLink="bloques-juguete">
         <img
           class="imageneSlider"
           src="IMG/productos/bloquesJugueteS.png"
@@ -166,7 +166,7 @@
       </a>
     </content>
     <content class="elementSlider">
-      <a routerLink="/croissant">
+      <a routerLink="croissant">
         <img
           class="imageneSlider"
           src="IMG/productos/croissantS.png"
@@ -179,7 +179,7 @@
       </a>
     </content>
     <content class="elementSlider">
-      <a routerLink="/puzzle">
+      <a routerLink="puzzle">
         <img
           class="imageneSlider"
           src="IMG/productos/puzzleS.png"
@@ -211,8 +211,8 @@
 <div class="segundoDiv crema">
   <aside class="menuFiltro">
     <ul>
-      <li><a routerLink="/comercios">Comercios</a></li>
-      <li><a routerLink="/productos">Categoria</a></li>
+      <li><a routerLink="comercios">Comercios</a></li>
+      <li><a routerLink="productos">Categoria</a></li>
       <li><p>Filtros</p></li>
     </ul>
     <span>
