--- a/version mejorada/FullStack-TarraCommerce/Frontend/src/app/pages/productos/productos.component.html
+++ b/version mejorada/FullStack-TarraCommerce/Frontend/src/app/pages/productos/productos.component.html
@@ -1,44 +1,94 @@
-<div>
+<div id="contenedor">
   <div class="categoriasTabla">
-    <div>
-      <img src="" alt="Icono de alimentos y bebidas" />
-      <a href="s">Alimentos y bebidas</a>
+    <div class="opcionesCategorias">
+      <img
+        src="IMG/categorias/alimentosBebidas.png"
+        alt="Icono de alimentos y bebidas"
+      />
+      <span class="texto">
+        <p>Alimentos y bebidas</p>
+      </span>
     </div>
-    <div>
-      <img src="" alt="Icono de moda y accesorios" />
-      <a href="s">Moda y accesorios</a>
+    <div class="opcionesCategorias">
+      <img
+        src="IMG/categorias/modaAccesorios.png"
+        alt="Icono de moda y accesorios"
+      />
+      <span class="texto">
+        <p>Moda y accesorios</p>
+      </span>
     </div>
-    <div>
-      <img src="" alt="Icono de juguetes y juegos" />
-      <a href="s">Juguetes y juegos</a>
+    <div class="opcionesCategorias">
+      <img
+        src="IMG/categorias/juguetesJuegos.png"
+        alt="Icono de juguetes y juegos"
+      />
+      <span class="texto">
+        <p>Juguetes y juegos</p>
+      </span>
     </div>
-    <div>
-      <img src="" alt="Icono de libros y papeleria" />
-      <a href="s">Libros y papeleria</a>
+    <div class="opcionesCategorias">
+      <img
+        src="IMG/categorias/librosPapeleria.png"
+        alt="Icono de libros y papeleria"
+      />
+      <span class="texto">
+        <p>Libros y papeleria</p>
+      </span>
     </div>
-    <div>
-      <img src="" alt="Icono de salud y belleza" />
-      <a href="s">Salud y belleza</a>
+    <div class="opcionesCategorias">
+      <img
+        src="IMG/categorias/saludBelleza.png"
+        alt="Icono de salud y belleza"
+      />
+      <span class="texto">
+        <p>Salud y belleza</p>
+      </span>
     </div>
-    <div>
-      <img src="" alt="Icono de tecnología y electrónica" />
-      <a href="s">Tecnología y electrónica</a>
+    <div class="opcionesCategorias">
+      <img
+        src="IMG/categorias/tecnologiaElectronica.png"
+        alt="Icono de tecnología y electrónica"
+      />
+      <span class="texto">
+        <p>Tecnología y electrónica</p>
+      </span>
     </div>
-    <div>
-      <img src="" alt="Icono de hogar y decoración" />
-      <a href="s">Hogar y decoración</a>
+    <div class="opcionesCategorias">
+      <img
+        src="IMG/categorias/hogarDecoracion.png"
+        alt="Icono de hogar y decoración"
+      />
+      <span class="texto">
+        <p>Hogar y decoración</p>
+      </span>
     </div>
-    <div>
-      <img src="" alt="Icono " />
-      <a href="s"></a>
+    <div class="opcionesCategorias">
+      <img
+        src="IMG/categorias/deportesAireLibre.png"
+        alt="Icono de deportes y aire libre"
+      />
+      <span class="texto">
+        <p>Deportes y Aire Libre</p>
+      </span>
     </div>
-    <div>
-      <img src="" alt="Icono " />
-      <a href="s"></a>
+    <div class="opcionesCategorias">
+      <img src="IMG/categorias/mascotas.png" alt="Icono de mascotas" />
+      <span class="texto">
+        <p>Mascotas</p>
+      </span>
     </div>
-    <div>
-      <img src="" alt="Icono " />
-      <a href="s"></a>
-    </div>
+    <a
+      routerLink="productos/artesania-y-manualidades"
+      class="opcionesCategorias"
+    >
+      <img
+        src="IMG/categorias/artesaniaManualidades.png"
+        alt="Icono de artesanía y manualidades"
+      />
+      <span class="texto">
+        <p>Artesanía y Manualidades</p>
+      </span>
+    </a>
   </div>
 </div>
