--- a/version mejorada/FullStack-TarraCommerce/Frontend/src/app/shared/header/header.component.html
+++ b/version mejorada/FullStack-TarraCommerce/Frontend/src/app/shared/header/header.component.html
@@ -65,7 +65,7 @@
         </div>
       </div>
       <div class="bordeD bordeI">
-        <a routerLink="eventos">Eventos</a>
+        <a routerLink="usuarios">Eventos</a>
       </div>
       <div class="bordeI">
         <a routerLink="about">Nosotros</a>
