--- a/version mejorada/FullStack-TarraCommerce/Frontend/src/styles.css
+++ b/version mejorada/FullStack-TarraCommerce/Frontend/src/styles.css
@@ -1,6 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
+html,
 body {
+  height: 100%;
   margin: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  min-height: 71.6vh;
+  flex: 1;
+}
+
+footer {
+  text-align: center;
+  background-color: #96663d;
+  color: #fff;
+  padding: 1em 0;
 }
 
 * {
